                     Revision history for Pod::Thread

3.01 - Not Released

 - Fix Perl warning when navbar is requested but there are no headings.
 - Always output \heading even if no title was seen.
 - Remove docmentation of the id option to the constructor.
 - Replace references to spin in the documentation with DocKnot.

3.00 - 2021-09-11

 - Remove support for parsing CVS $Id$ strings and emitting \id commands.
 - Stop wrapping output text.
 - Fix internal section links.
 - Fix conversion of nested =over blocks.
 - Fix conversion of =over blocks without an =item.
 - Fix links to headings containing markup.
 - Fix metacharacter escaping in headings, contents, and navbar.
 - Fix handling of =for thread and =begin thread.
 - Fix non-breaking spaces in navbar section names.
 - Fix internal links whose anchors are wrapped.
 - Output the document before erroring out if POD errors were seen.
 - Suppress \signature if the input document was empty.
 - Add bugtracker, homepage, and repository package metadata.

2.00 - 2021-03-28

 - Table of contents and navbar generation is now handled internally in
   the Pod::Thread module rather than with a pre-scanning pass.  The
   contents and navbar module constructor options are now simple booleans.
 - Don't title-case words in section titles in the navbar that contain an
   underscore.
 - CVS Id strings are now honored if found anywhere in the document.
 - Change documentation references from Pod::Parser to Pod::Simple.
 - Change the licensing to the Expat (MIT) license.
 - Require Perl 5.24 or later.

1.01 - 2013-06-30

 - Remove single spaces at the start of lines in wrapped paragraphs.
 - Encode output in UTF-8 if necessary.
 - Strip formatting codes from headings that will go into the table of
   contents or navbar, and fix the algorithm for adding anchors to account
   for this transformation.
 - Use Module::Build as the build system.

1.00 - 2013-01-05

 - Rewritten to use Pod::Simple as the underlying POD parser.